syntax = "proto3";
package kratos.api;

option go_package = "repo.example.com/oss/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Env env = 1;
  Service service = 2;
  Server server = 3;
  Data data = 4;
  Oss oss = 5;
}

message Service {
  string name = 1;
  string version = 2;
}

message Env {
  string mode = 1;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
  }
  message Redis {
    string addr = 1;
    string password = 2;
    int32 db = 3;
    string prefix = 4;
    google.protobuf.Duration read_timeout = 5;
    google.protobuf.Duration write_timeout = 6;
  }
  Database database = 1;
  Redis redis = 2;
}

message Oss {
  string access_key = 1;
  string access_secret = 2;
  string end_point = 3;
  string bucket_name = 4;
  string region = 5;
  string sts_expire = 6;
  string sts_role_arn = 7;
  string session_name = 8;
}